Add get config endpoint. Fix 32
